@@ -1069,6 +1069,9 @@
         name = "Karol Kozub (automagic)"
     [/entry]
     [entry]
+        name = "Kristoffer Grönlund (kegie)"
+    [/entry]
+    [entry]
         name = "Laurent Birtz"
     [/entry]
     [entry]
