@@ -15,6 +15,7 @@
 
     base_income=2
     village_income=1
+    village_support=1
     poison_amount=8
     rest_heal_amount=2
     recall_cost=20
