@@ -72,6 +72,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
         controller=human
         recruit="Ghost,Troll Whelp,Assassin,Elvish Hero,Elvish Fighter,Elvish Archer,Horseman,Mage,Elvish Shaman,Red Mage,Spearman,Swordsman,Duelist,Fencer,Elvish Captain,Elvish Ranger,Elvish Shyde,Thief,Rogue,White Mage,Mage of Light,Elvish Sharpshooter,Silver Mage,Vampire Bat,Blood Bat,Dread Bat,Soulless,Walking Corpse"
         gold=2000
+		village_support=5
         team_name="1"
         shroud=yes
         recall_cost=42
