@@ -191,6 +191,7 @@ CALLABLE_WRAPPER_INPUT(gold)
 CALLABLE_WRAPPER_INPUT(start_gold)
 CALLABLE_WRAPPER_INPUT(base_income)
 CALLABLE_WRAPPER_INPUT(village_gold)
+CALLABLE_WRAPPER_INPUT(village_support)
 CALLABLE_WRAPPER_INPUT(name)
 CALLABLE_WRAPPER_INPUT(is_human)
 CALLABLE_WRAPPER_INPUT(is_ai)
@@ -202,6 +203,7 @@ CALLABLE_WRAPPER_FN(gold)
 	} else
 CALLABLE_WRAPPER_FN(base_income)
 CALLABLE_WRAPPER_FN(village_gold)
+CALLABLE_WRAPPER_FN(village_support)
 CALLABLE_WRAPPER_FN(name)
 CALLABLE_WRAPPER_FN(is_human)
 CALLABLE_WRAPPER_FN(is_ai)
