@@ -168,6 +168,7 @@ game_info::game_info(const config& game, const config& game_config)
 , era()
 , era_short()
 , gold(game["mp_village_gold"])
+, support(game["mp_village_support"])
 , xp(game["experience_modifier"] + "%")
 , vision()
 , status()
