@@ -41,6 +41,7 @@ struct mp_game_settings : public savegame::savegame_config
 	std::string mp_scenario;
 
 	int village_gold;
+	int village_support;
 	int xp_modifier;
 	int mp_countdown_init_time;
 	int mp_countdown_reservoir_time;
